@@ -41,6 +41,7 @@ AM_CONDITIONAL(BUILD_PDFDOCS, test "x$BUILD_PDFDOCS" != "xno")
 # XSLT processor
 AC_PATH_PROG(PATH_XSLTPROC,xsltproc)
 AM_CONDITIONAL(USE_XSLT, test -n "$PATH_XSLTPROC")
+AC_SUBST(PATH_XSLTPROC)
 
 # Look for sendmail
 AC_ARG_WITH(sendmail,[  --with-sendmail=<path>  Path of your sendmail bianry],[PATH_SENDMAIL="$withval"],[AC_PATH_PROG(PATH_SENDMAIL, sendmail, none, [$PATH:/usr/sbin:/sbin])])
@@ -57,7 +58,9 @@ AC_CHECK_HEADER(execinfo.h,[
 
 # don't use automake's yacc/lex support - it's totally broken for our needs
 AC_PATH_PROG(PATH_BISON,bison)
+AC_SUBST(PATH_BISON)
 AC_PATH_PROG(PATH_FLEX,flex)
+AC_SUBST(PATH_FLEX)
 AM_CONDITIONAL(BUILD_GRAMMAR, test -n "$PATH_BISON" -a -n "$PATH_FLEX")
 
 # Networking libraries
@@ -117,6 +120,15 @@ fi
 AC_ARG_WITH(gc,[  --with-gc=<path>        Prefix of your GC library installation],[LDFLAGS="$LDFLAGS -L$withval/lib";CXXFLAGS="$CXXFLAGS -I$withval/include"])
 AC_CHECK_LIB(dl,dlopen,[LIBS="$LIBS -ldl"])
 AC_CHECK_LIB(gc,GC_malloc,,[AC_MSG_ERROR([Could not find suitable libgc])])
+
+# sqlite3
+AC_ARG_WITH(sqlite,[  --with-sqlite=<path>    Prefix of your sqlite3 library installation],[LDFLAGS="$LDFLAGS -L$withval/lib";CXXFLAGS="$CXXFLAGS -I$withval/include"])
+AC_CHECK_LIB(sqlite3,sqlite3_open,,[AC_MSG_ERROR([Could not find suitable libsqlite3])])
+AC_PATH_PROG(PATH_SQLITE3,sqlite3,none,[$PATH:$withval])
+if test "x$PATH_SQLITE3" = "xnone" ; then
+	AC_MSG_ERROR([Could not find sqlite3 binary])
+fi
+AC_SUBST(PATH_SQLITE3)
 
 # Debugging, always
 AC_DEFINE(DEBUG, 1, [Enable debugging features])
