@@ -1,0 +1,6 @@
+CREATE TABLE objects (id INTEGER PRIMARY KEY AUTOINCREMENT, class VARCHAR(40) NOT NULL);
+CREATE TABLE properties (id INTEGER NOT NULL, name VARCHAR(40) NOT NULL, value TEXT);
+CREATE INDEX properties_id ON properties (id);
+CREATE TABLE tags (id INTEGER NOT NULL, tag VARCHAR(40) NOT NULL, PRIMARY KEY(id,tag));
+CREATE INDEX tags_tag ON tags (tag);
+CREATE INDEX tags_id ON tags (id);
